--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,5 +21,5 @@ a {
 
 @font-face {
   font-family: "burtons";
-  src: url("../public/Burtons.otf");
+  src: url("../public/Burtons.otf") format("opentype");
 }
